this is broken, but
a) introduced StepsHelper, CalendarHelper, PreferenceHelper
b) unified preference keys: now located in application strings
c) tried to update themes to material 3 (failed). I do not know why, i do not want to know why, but for some godforsaken reason its not applying. Will investigate

TODO:
a) write a proper repo for preferences to cache them, cause currently I'm reading all of it at runtime. Idk the performance impact, actually
b) keep looking at material ui docs to figure out why the material colors arent applying.

--- a/app/src/main/res/layout/calendar.xml
+++ b/app/src/main/res/layout/calendar.xml
@@ -9,6 +9,6 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:showWeekNumber="false"
-    android:theme="@style/CalendarViewStyle"
+    android:theme="@style/Widget.MaterialComponents.MaterialCalendar"
     android:nestedScrollingEnabled="false"
     />
