--- a/app/src/main/res/values-de/arrays.xml
+++ b/app/src/main/res/values-de/arrays.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Theme -->
-    <string-array name="theme_entries">
+    <string-array name="theme_mode_entries">
         <item>Systemvorgabe</item>
         <item>Licht</item>
         <item>Dunkles</item>
