--- a/app/src/main/res/values-it/arrays.xml
+++ b/app/src/main/res/values-it/arrays.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Theme -->
-    <string-array name="theme_entries">
+    <string-array name="theme_mode_entries">
         <item>Di sistema</item>
         <item>Chiaro</item>
         <item>Scuro</item>
